--- a/veoc/templates/veoc/gen_feedback.html
+++ b/veoc/templates/veoc/gen_feedback.html
@@ -134,7 +134,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <form method="post" action="{% url 'veoc:module_general_feedback' %}">
+              <form method="post" action="{% url 'veoc:edit_feedback' %}">
                   <div class="modal-body">
                     <div class="form-group">
                         <label for="heading">Date Reported:</label>
