edit function on datasource

--- a/veoc/templates/veoc/diseaselist.html
+++ b/veoc/templates/veoc/diseaselist.html
@@ -95,6 +95,10 @@
 									<label>Disease</label>
 								  <input type="text" class="form-control input-sm"  name="disease_name" id="disease_name">
 								</div>
+                <div class="form-group">
+									<label>UID :</label>
+								  <input type="text" class="form-control input-sm"  name="uid" id="uid">
+								</div>
                 <div class="form-check">
                   <label class="form-check-label" for="diseasesignificant">
                     priority Disease?
