--- a/veoc/templates/veoc/datasourcelist.html
+++ b/veoc/templates/veoc/datasourcelist.html
@@ -48,7 +48,7 @@
                             <td>
                               <button type="button" class="btn btn-primary btn-xs view_button"
                                 data-toggle="modal" data-target="#view_designation_modal"
-                                data-id="{{ data_source.pk }}>"
+                                data-id="{{ data_source.pk }}"
                                 data-description="{{ data_source.source_description }}"
                                 data-date="{{ data_source.created_at }}"
                                 data-user="{{ data_source.created_by.username }}"
@@ -58,7 +58,7 @@
                               </button>
                               <button type="button" class="btn btn-primary btn-xs edit_button"
                                 data-toggle="modal" data-target="#edit_designation_modal"
-                                data-id="{{ data_source.pk }}>"
+                                data-id="{{ data_source.pk }}"
                                 data-description="{{ data_source.source_description }}"
                                 data-date="{{ data_source.created_at }}"
                                 data-user="{{ data_source.created_by.username }}"
@@ -97,7 +97,7 @@
 								</div>
 
 								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-								<button type="submit" id="adddescriptionbtn" class="btn btn-success btn-sm pull-right"> <i class="fa fa-plus" aria-hidden="true"></i> Add Designation</button>
+								<button type="submit" id="adddescriptionbtn" class="btn btn-success btn-sm pull-right"> <i class="fa fa-plus" aria-hidden="true"></i> Add Data Source</button>
 							</form>
 						</div>
 						</div>
@@ -152,22 +152,20 @@
               </button>
             </div>
             <div class="modal-body">
-              <form method="post" action="#">
+              <form method="post" action="{% url 'veoc:edit_data_list' %}">
+                {% csrf_token %}
                   <div class="modal-body">
                     <div class="form-group" style="display: none;">
-                        <input class="form-control" id="id" name="id" style="display: none;">
+                        <input class="form-control id" name="id" style="display: none;">
                     </div>
                     <div class="form-group">
                         <label for="heading">Data Source Description :</label>
                         <input class="form-control data_source" name="data_source">
                     </div>
                   </div>
+                  <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                  <button type="submit" id="adddescriptionbtn" class="btn btn-success btn-sm pull-right">Save Changes</button>
               </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
           </div>
         </div>
       </div>
