--- a/veoc/templates/veoc/eventlist.html
+++ b/veoc/templates/veoc/eventlist.html
@@ -91,6 +91,10 @@
 									<label>Event :</label>
 								  <input type="text" class="form-control input-sm"  name="event_name" id="event_name">
 								</div>
+                <div class="form-group">
+									<label>UID :</label>
+								  <input type="text" class="form-control input-sm"  name="uid" id="uid">
+								</div>
 
 								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 								<button type="submit" id="adddescriptionbtn" class="btn btn-success btn-sm pull-right"> <i class="fa fa-plus" aria-hidden="true"></i> Add Event</button>
