--- a/veoc/templates/veoc/case_defination.html
+++ b/veoc/templates/veoc/case_defination.html
@@ -65,7 +65,7 @@
                                 <i class="fa fa-eye">
                                 </i>
                             </button>
-                            <button type="button" class="btn btn-primary btn-xs edit_button"
+                            <!-- <button type="button" class="btn btn-primary btn-xs edit_button"
                                 data-toggle="modal" data-target="#edit_definition_modal"
                                 data-id="{{ standard_case_definition.pk }}>"
                                 data-code="{{ standard_case_definition.code }}"
@@ -77,7 +77,7 @@
                                 title="Edit">
                                 <i class="fa fa-edit">
                                 </i>
-                            </button>
+                            </button> -->
                           </td>
                         </tr>
                         {% endfor %}
