--- a/veoc/templates/veoc/contacttypelist.html
+++ b/veoc/templates/veoc/contacttypelist.html
@@ -93,7 +93,7 @@
 								{% csrf_token %}
                 <div class="form-group">
 									<label>Contact Type Description</label>
-								  <input type="text" class="form-control input-sm"  name="designation" id="designation">
+								  <input type="text" class="form-control input-sm"  name="designation" id="designation" required>
 								</div>
 
 								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
