--- a/veoc/templates/veoc/datasourcelist.html
+++ b/veoc/templates/veoc/datasourcelist.html
@@ -93,7 +93,7 @@
 								{% csrf_token %}
                 <div class="form-group">
 									<label>Data Source Description</label>
-								  <input type="text" class="form-control input-sm"  name="data_source" id="data_source">
+								  <input type="text" class="form-control input-sm"  name="data_source" id="data_source" required>
 								</div>
 
 								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
