--- a/veoc/templates/veoc/diseaselist.html
+++ b/veoc/templates/veoc/diseaselist.html
@@ -93,11 +93,11 @@
 								{% csrf_token %}
                 <div class="form-group">
 									<label>Disease</label>
-								  <input type="text" class="form-control input-sm"  name="disease_name" id="disease_name">
+								  <input type="text" class="form-control input-sm"  name="disease_name" id="disease_name" required>
 								</div>
                 <div class="form-group">
 									<label>UID :</label>
-								  <input type="text" class="form-control input-sm"  name="uid" id="uid">
+								  <input type="text" class="form-control input-sm"  name="uid" id="uid" required>
 								</div>
                 <div class="form-check">
                   <label class="form-check-label" for="diseasesignificant">
