--- a/veoc/templates/veoc/gen_feedback.html
+++ b/veoc/templates/veoc/gen_feedback.html
@@ -181,7 +181,7 @@
 						{% csrf_token %}
             <div class="form-group">
                 <label for="heading">Challenge:</label>
-                <textarea class="form-control challange" id="challange" rows="3" name="challange" placeholder="Enter Challanges"></textarea>
+                <textarea class="form-control challange" id="challange" rows="3" name="challange" placeholder="Enter Challanges" required></textarea>
             </div>
             <div class="form-group" style="display: none;">
                 <label for="heading">Is Adressed?</label>
