--- a/veoc/templates/veoc/eventlist.html
+++ b/veoc/templates/veoc/eventlist.html
@@ -89,11 +89,11 @@
 								{% csrf_token %}
                 <div class="form-group">
 									<label>Event :</label>
-								  <input type="text" class="form-control input-sm"  name="event_name" id="event_name">
+								  <input type="text" class="form-control input-sm"  name="event_name" id="event_name" required>
 								</div>
                 <div class="form-group">
 									<label>UID :</label>
-								  <input type="text" class="form-control input-sm"  name="uid" id="uid">
+								  <input type="text" class="form-control input-sm" name="uid" id="uid" required>
 								</div>
 
 								<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
