--- a/veoc/templates/veoc/feedback.html
+++ b/veoc/templates/veoc/feedback.html
@@ -223,7 +223,7 @@
 						</div>
             <div class="form-group">
                 <label for="heading">Challenge:</label>
-                <textarea class="form-control challange" id="challange" rows="3" name="challange" placeholder="Enter Challanges"></textarea>
+                <textarea class="form-control challange" id="challange" rows="3" name="challange" placeholder="Enter Challanges" required></textarea>
             </div>
             <div class="form-group">
                 <label for="heading">Recommendation:</label>
