--- a/veoc/templates/veoc/minutes.html
+++ b/veoc/templates/veoc/minutes.html
@@ -147,19 +147,19 @@
 								</div><!-- /form-group -->
                 <div class="form-group">
 									<label>Author</label>
-								<input type="text" class="form-control input-sm"  name="author" id="author">
+								<input type="text" class="form-control input-sm"  name="author" id="author" required>
 								</div>
 								<div class="form-group">
 									<label>Document Description</label>
-                  <textarea class="form-control" id="description" rows="3" name="description" placeholder="Describe the type of document"></textarea>
+                  <textarea class="form-control" id="description" rows="3" name="description" placeholder="Describe the type of document" required></textarea>
 								</div><!-- /form-group -->
 								<div class="form-group">
                   <label for="filename"><b>Upload Document: </b></label>
-                  <input type="file" name="file" required class="form-control">
+                  <input type="file" name="file" required class="form-control" required>
                 </div><!-- /form-group -->
                 <div class="form-group">
 									<label>Public Document</label>
-									<select class="form-control input-sm public" data-width="100%" id="public" name="public">
+									<select class="form-control input-sm public" data-width="100%" id="public" name="public" required>
                     <option value="" disabled selected>Select Accessibility</option>
                         <option value="t">Yes</option>
                         <option value="f">No</option>
