--- a/veoc/templates/veoc/public_template.html
+++ b/veoc/templates/veoc/public_template.html
@@ -29,17 +29,6 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="static/css/common.css" type="text/css"/> -->
-    <!-- <link type="text/css" rel="stylesheet"
-          href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/ui-lightness/jquery-ui.css"/>
-    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet"
-          type="text/css"/>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
-    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js" type="text/javascript"></script>-->
-    <!-- <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc-WwoLvPhsVHIKQ3OHLXYr2S4rV8QQP8&libraries=visualization&callback=initMap">
-    </script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 
     <!-- Bootstrap JavaScript -->
@@ -47,18 +36,8 @@
 
     <script src="/static/js/jquery.multi-select.js"></script>
 
-    <!--highcharts library-->
-    <!-- <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/series-label.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/drilldown.js"></script> -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
-    <!-- // <script src="/static/jsPDF-1.3.2/jspdf.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js" integrity="sha256-c3RzsUWg+y2XljunEQS0LqWdQ04X1D3j22fd/8JCAKw=" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -75,14 +54,12 @@
     <!-- navbar-header-->
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:#3c8dbc">
-      <a class="navbar-brand" href="#" style="color: #ffffff">Emergency Alart Reporting
+      <!-- <a class="btn btn--radius btn--green" href="/login" role="button" style="color: #ffffff"; float: left;>
+        Back
+      </a> -->
+      <button class="btn btn--radius btn--green" style="display: block; margin: 0 auto; float: left;" onClick="location.href='{% url 'veoc:login' %}'">Back</button>
+      <a class="navbar-brand" href="/login" style="color: #ffffff">Emergency Alart Reporting
           System - Public Accessed Documents</a>
-        <!-- <ul class="nav navbar-nav">
-            <li class="active">
-                <button class="navbar-toggle collapse in" data-toggle="collapse" id="menu-toggle-2"><span
-                        class="glyphicon glyphicon-th-large" aria-hidden="true"></span></button>
-            </li>
-        </ul> -->
     </div>
 </nav>
 <!-- <div id="wrapper"> -->
