--- a/veoc/templates/veoc/watchers_schedule.html
+++ b/veoc/templates/veoc/watchers_schedule.html
@@ -25,7 +25,7 @@
           <div class="col-md-12">
             <div class="panel panel-default table-responsive">
               <div class="panel-heading">
-                Watchers Schedule
+                Current week watchers schedule
                 <span class="label label-info pull-right" id="totalspan">{{achedule_count}} Schedules </span>
               </div>
               <div class="padding-md clearfix">
@@ -36,7 +36,7 @@
                         <th>Start date</th>
                         <th>End date</th>
                         <th>Watchers name</th>
-                        <th>Action</th>
+                        <th>Created By</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -45,8 +45,9 @@
                             <td>{{ cont.week_no }}</td>
                             <td>{{ cont.from_date }}</td>
                             <td>{{ cont.to_date }}</td>
-                            <td>{{ cont.watcher_details.first_name }}</td>
-                            <td><button type="button" class="btn btn-primary btn-xs view_button"
+                            <td>{{ cont.watcher_details.first_name }} {{ cont.watcher_details.last_name }}</td>
+                            <td>{{ cont.created_by.username }}</td>
+                            <!-- <td><button type="button" class="btn btn-primary btn-xs view_button"
                               data-toggle="modal" data-target="#view_schedule_modal"
                               data-id="{{ cont.id }}"
                               data-weekno="{{ cont.week_no }}"
@@ -68,7 +69,7 @@
                               <i class="fa fa-edit">
                               </i>
                             </button>
-                          </td>
+                          </td> -->
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -177,7 +178,7 @@
 
 {% block script %}
   <script type="text/javascript">
-    {% csrf_token %}
+    // {% csrf_token %}
 
     $(document).ready(function () {
             $('#watchers_table').DataTable({
@@ -222,7 +223,7 @@
                 success: function (data) {
                     for (var i = 0; i < data.length; i++) {
                         $('#contacts').multiSelect('addOption', {
-                            value: data[i].fields['first_name'],
+                            value: data[i].pk,
                             text: data[i].fields['first_name'] + " " + data[i].fields['second_name'],
                             index: i
                         });
