corona virus module with reports

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -153,6 +153,8 @@
                           class="fa fa-code-fork fa-stack-1x "></i></span>Diseases Register</a></li>
                   <li><a href="/event_register"><span class="fa-stack fa-lg pull-left"><i
                           class="fa fa-child fa-stack-1x "></i></span>Events Register</a></li>
+                  <li><a href="/quarantine_register"><span class="fa-stack fa-lg pull-left"><i
+                      class="fa fa-archive fa-stack-1x "></i></span>Corona Quarantine</a></li>
               </ul>
           </li>
           <li>
@@ -189,10 +191,19 @@
                   <li><a href="/call_report">EOC Call report</a></li>
                   <li><a href="/unrelated_call_report">Unrelated Calls report</a></li>
                   <li><a href="/disease_report">Disease report</a></li>
-                  <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
                   <li><a href="/events_report">Events report</a></li>
-                  <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
                   <li><a href="/case_definition">Disease Case Definition</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left">
+                <i class="fa fa-clipboard fa-stack-1x "></i>
+              </span>SPECIAL REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
+                  <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
+                  <li><a href="/follow_up">Ongoing Quarantine</a></li>
+                  <li><a href="/complete_quarantine">Completed Quarantine</a></li>
               </ul>
           </li>
           <li>
@@ -244,7 +255,7 @@
                   <li><a href="/eoc_cont">EOC Personnel Contacts</a></li>
               </ul>
           </li>
-          {% endif %}          
+          {% endif %}
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-book fa-stack-1x "></i></span>EMERGENCY
                   CONTACTS</a>
